2018-Sep-15 -- ES495 revision Original